# leetcode

./: .gitignore  1127.md  README.md  RECORD.txt  add_ignore.py  leetcode_1107.md  note.md  readme.md  readme_.md  record.md  record_backup.txt  record_to_leet.txt  solution_check.py  timestamp.md  to_leet_record.txt  top145.md  word
algorithms/: CMakeLists.txt  leetcode-zero.md  note.md
algorithms/algorithm_paradigm/: BacktrackingAlgorithms.md  ComputerScienceConcepts.md  DC&&DP.md
algorithms/config/: CMakeLists.txt
algorithms/cpp/: CMakeLists.txt  Store  cppUtils
algorithms/cpp/Backpack_I/: Backpack_I_practise.cpp  CMakeLists.txt
algorithms/cpp/Backpack_II/: CMakeLists.txt
algorithms/cpp/Backpack_III/: CMakeLists.txt
algorithms/cpp/Backpack_IV/: CMakeLists.txt
algorithms/cpp/Backpack_V/: CMakeLists.txt
algorithms/cpp/Backpack_VI/: CMakeLists.txt
algorithms/cpp/Utilities/: Array.cpp  Array.h  BinaryTree.h  List.cpp  List.h  StringUtil.h  Tree.h
algorithms/cpp/_000_cppUtilsTest/: CMakeLists.txt  utils-test.cpp
algorithms/cpp/_001_TwoSum/: CMakeLists.txt  Solutions.cpp  _001_TwoSum.cpp  _001_TwoSum_practise.cpp
algorithms/cpp/_002_AddTwoNumbers/: CMakeLists.txt  Solutions.cpp  _002_AddTwoNumbers.cpp  _002_AddTwoNumbers_practise.cpp  info
algorithms/cpp/_003_LongestSubstringWithoutRepeatingCharacters/: CMakeLists.txt  Solutions.cpp  info.txt
algorithms/cpp/_004_MedianOfTwoSortedArrays/: CMakeLists.txt  Solutions.cpp  _004_MedianOfTwoSortedArrays_practise.cpp  _004_MedianOfTwoSortedArrays_std.cpp  _004_MedianOfTwoSortedArrays_std_debug.cpp  info
algorithms/cpp/_005_LongestPalindromicSubstring/: CMakeLists.txt  Solutions.cpp  _005_LongestPalindromicSubstring_practise.cpp  _005_LongestPalindromicSubstring_std.cpp  _005_LongestPalindromicSubstring_std2.cpp  _005_LongestPalindromicSubstring_std_debug.cpp  note
algorithms/cpp/_006_MergeTwoSortedArrays   --lintcode  topic/: CMakeLists.txt
algorithms/cpp/_006_ZigZagConversion/: Solutions.cpp
algorithms/cpp/_007_ReverseInteger/: CMakeLists.txt  Solutions.cpp  _007_ReverseInteger_practise.cpp  info
algorithms/cpp/_008_StringtoInteger_atoi/: CMakeLists.txt  Solutions.cpp  _008_StringtoInteger_atoi_practise.cpp  _008_StringtoInteger_atoi_std.cpp  info
algorithms/cpp/_010_Regular_Expression_Matching/: CMakeLists.txt
algorithms/cpp/_010_Regular_Expression_Matching   --- not/: CMakeLists.txt
algorithms/cpp/_011_ContainerWithMostWater/: CMakeLists.txt  Solutions.cpp  Solutions_011.cpp  _011_ContainerWithMostWater_practise.cpp
algorithms/cpp/_013_RomantoInteger/: CMakeLists.txt  Solutions.cpp  _013_RomantoInteger_practise.cpp  _013_RomantoInteger_std.cpp  info.txt
algorithms/cpp/_014_LongestCommonPrefix/: CMakeLists.txt  Solutions.cpp  _014_LongestCommonPrefix_practise.cpp
algorithms/cpp/_015_3Sum/: CMakeLists.txt  Solutions.cpp  _015_3Sum.cpp  _015_3Sum_practise.cpp  _015_3Sum_std.cpp  _015_3Sum_std_debug.cpp
algorithms/cpp/_016_3SumClosest/: CMakeLists.txt  Solutions.cpp  _016_3SumClosest_practise.cpp  _016_3SumClosest_std.cpp  _016_3SumClosest_std_debug.cpp  info
algorithms/cpp/_017_LetterCombinationsOfAPhoneNumber/: CMakeLists.txt  Solutions.cpp  _017_LetterCombinationsOfAPhoneNumber_practise.cpp  _017_LetterCombinationsOfAPhoneNumber_std.cpp
algorithms/cpp/_018_4Sum/: CMakeLists.txt  Solutions.cpp  _018_4Sum.cpp  _018_4Sum_practise.cpp  info
algorithms/cpp/_019_RemoveNthNodeFromEndOfList/: CMakeLists.txt  Solutions.cpp  _019_RemoveNthNodeFromEndOfList_practise.cpp
algorithms/cpp/_020_ValidParentheses/: CMakeLists.txt  Solutions.cpp  Solutions_020.cpp  _020_ValidParentheses_practise.cpp  _020_ValidParentheses_std.cpp
algorithms/cpp/_021_MergeTwoSortedLists/: CMakeLists.txt  Solutions.cpp  _021_MergeTwoSortedLists_practise.cpp
algorithms/cpp/_022_GenerateParentheses/: CMakeLists.txt  Solutions.cpp  Solutions_022.cpp  _022_GenerateParentheses_practise.cpp
algorithms/cpp/_023_MergekSortedLists/: CMakeLists.txt  Solutions.cpp  _023_MergekSortedLists_practise.cpp  _023_MergekSortedLists_std.cpp  info.txt
algorithms/cpp/_026_RemoveDuplicatesFromSortedArray/: CMakeLists.txt  Solutions.cpp  _026_RemoveDuplicatesFromSortedArray_practise.cpp
algorithms/cpp/_027_RemoveElement/: CMakeLists.txt  Solutions.cpp  _027_RemoveElement_practise.cpp
algorithms/cpp/_028_ImplementstrStr/: CMakeLists.txt  Solutions.cpp  _028_ImplementstrStr_practise.cpp
algorithms/cpp/_029_DivideTwoIntegers/: CMakeLists.txt  Solutions.cpp  _029_DivideTwoIntegers_practise.cpp  _029_DivideTwoIntegers_std.cpp
algorithms/cpp/_033_SearchInRotatedSortedArray/: CMakeLists.txt  Solutions.cpp  _033_SearchInRotatedSortedArray_practise.cpp  _033_SearchInRotatedSortedArray_std.cpp
algorithms/cpp/_039_CombinationSum/: CMakeLists.txt  Solutions.cpp  _039_CombinationSum_practise.cpp
algorithms/cpp/_040_CombinationSumII/: CMakeLists.txt  Solutions.cpp  Solutions_040.cpp  _040_CombinationSumII_practise.cpp
algorithms/cpp/_042_TrappingRainWater/: CMakeLists.txt  Solutions.cpp  _042_TrappingRainWater_practise.cpp  _042_TrappingRainWater_std.cpp
algorithms/cpp/_044_WildcardMatching   --- not/: CMakeLists.txt
algorithms/cpp/_046_Permutations/: CMakeLists.txt  Solutions.cpp  _046_Permutations_practise.cpp  _046_Permutations_std.cpp  info.txt
algorithms/cpp/_047_Permutations_II/: CMakeLists.txt  Solutions.cpp  _047_Permutations_II_practise.cpp  _047_Permutations_II_std_debug.cpp
algorithms/cpp/_050_Pow_x_n/: CMakeLists.txt  Solutions.cpp  _050_Pow_x_n_std.cpp  note
algorithms/cpp/_053_MaximumSubarray/: CMakeLists.txt  Solutions.cpp  _053_MaximumSubarray_practise.cpp
algorithms/cpp/_069_Sqrt_x/: CMakeLists.txt  Solutions.cpp  _069_Sqrt_x_std.cpp
algorithms/cpp/_077_Combinations/: CMakeLists.txt  Solutions.cpp  _077_Combinations_practise.cpp
algorithms/cpp/_078_Subsets/: CMakeLists.txt  Solutions.cpp  _078_Subsets_practise.cpp  _078_Subsets_std.cpp  backtracking  note
algorithms/graph_illustrate/: graph_illustrate.md
algorithms/notes/: _705_706_bug-tips.md  cpp_note.md  note.md
(+1856 files in other folders)
