cmake_minimum_required(VERSION 3.14)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

#include_directories(algorithms/cpp)


add_subdirectory(cpp/_706_DesignHashMap)
add_subdirectory(cpp/_705_DesignHashSet)
add_subdirectory(cpp/_001_TwoSum/)
add_subdirectory(cpp/_167_TwoSumII_InputArrayIsSorted)
add_subdirectory(cpp/_170_TwoSumIII_DataStructureDesign)
add_subdirectory(cpp/_653_TwoSumIV_InputIsA_BST)
add_subdirectory(cpp/_1099_TwoSumLessThanK)
add_subdirectory(cpp/_015_3Sum)
add_subdirectory(cpp/_016_3SumClosest)
add_subdirectory(cpp/_259_3SumSmaller)
add_subdirectory(cpp/_018_4Sum)
add_subdirectory(cpp/_454_4SumII)
add_subdirectory(cpp/_002_AddTwoNumbers)
add_subdirectory(cpp/_445_AddTwoNumbersII)
add_subdirectory(cpp/_395_LongestSubstringWithAtLeastKRepeatingCharacters)
add_subdirectory(cpp/_340_LongestSubstringWithAtMostKDistinctCharacters)