cmake_minimum_required(VERSION 3.14)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

#include_directories(algorithms/cpp)

add_subdirectory(cpp/_000_Algos/DynamicProgramming/LongestCommonSubsequence)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_I)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_II)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_III)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_IV)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_V)
add_subdirectory(cpp/_000_Algos/DynamicProgramming/Backpack/Backpack_VI)
add_subdirectory(cpp/_706_DesignHashMap)
add_subdirectory(cpp/_705_DesignHashSet)
add_subdirectory(cpp/_001_TwoSum/)
add_subdirectory(cpp/_167_TwoSumII_InputArrayIsSorted)
add_subdirectory(cpp/_170_TwoSumIII_DataStructureDesign)
add_subdirectory(cpp/_653_TwoSumIV_InputIsA_BST)
add_subdirectory(cpp/_1099_TwoSumLessThanK)
add_subdirectory(cpp/_015_3Sum)
add_subdirectory(cpp/_016_3SumClosest)
add_subdirectory(cpp/_259_3SumSmaller)
add_subdirectory(cpp/_018_4Sum)
add_subdirectory(cpp/_454_4SumII)
add_subdirectory(cpp/_002_AddTwoNumbers)
add_subdirectory(cpp/_445_AddTwoNumbersII)
add_subdirectory(cpp/_395_LongestSubstringWithAtLeastKRepeatingCharacters)
add_subdirectory(cpp/_340_LongestSubstringWithAtMostKDistinctCharacters)
add_subdirectory(cpp/_004_MedianOfTwoSortedArrays)
add_subdirectory(cpp/_005_LongestPalindromicSubstring)
add_subdirectory(cpp/_516_LongestPalindromicSubsequence/)
add_subdirectory(cpp/_007_ReverseInteger/)
add_subdirectory(cpp/_008_StringtoInteger_atoi)
add_subdirectory(cpp/_190_ReverseBits)
add_subdirectory(cpp/_191_Numberof_1_Bits)
add_subdirectory(cpp/_010_Regular_Expression_Matching)
add_subdirectory(cpp/_011_ContainerWithMostWater)
add_subdirectory(cpp/_042_TrappingRainWater)
add_subdirectory(cpp/_013_RomantoInteger)
add_subdirectory(cpp/_014_LongestCommonPrefix)
add_subdirectory(cpp/_017_LetterCombinationsOfAPhoneNumber)
add_subdirectory(cpp/_022_GenerateParentheses)
add_subdirectory(cpp/_078_Subsets)
add_subdirectory(cpp/_090_Subsets_II)
add_subdirectory(cpp/_046_Permutations)
add_subdirectory(cpp/_047_Permutations_II)
add_subdirectory(cpp/_039_CombinationSum)
add_subdirectory(cpp/_040_CombinationSumII)
add_subdirectory(cpp/_077_Combinations)
add_subdirectory(cpp/_216_CombinationSumIII)
add_subdirectory(cpp/_377_CombinationSumIV)
add_subdirectory(cpp/Backpack_VI)
