cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

#add_executable(_003_LongestSubstringWithoutRepeatingCharacters_std _003_LongestSubstringWithoutRepeatingCharacters_std.cpp)
#add_executable(_003_LongestSubstringWithoutRepeatingCharacters_std_debug _003_LongestSubstringWithoutRepeatingCharacters_std_debug.cpp)
#add_executable(_003_LongestSubstringWithoutRepeatingCharacters_practise _003_LongestSubstringWithoutRepeatingCharacters_practise.cpp)

add_executable(_003_LongestSubstringWithoutRepeatingCharacters_practise _003_LongestSubstringWithoutRepeatingCharacters_practise.cpp)
add_executable(Solutions_003 Solutions.cpp)
