cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_006_MergeTwoSortedArrays   --lintcode  topic_std _006_MergeTwoSortedArrays   --lintcode  topic_std.cpp)
add_executable(_006_MergeTwoSortedArrays   --lintcode  topic_std_debug _006_MergeTwoSortedArrays   --lintcode  topic_std_debug.cpp)
add_executable(_006_MergeTwoSortedArrays   --lintcode  topic_practise _006_MergeTwoSortedArrays   --lintcode  topic_practise.cpp)
add_executable(Solutions_006 Solutions.cpp)
