cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_010_Regular_Expression_Matching   --- not_std _010_Regular_Expression_Matching   --- not_std.cpp)
add_executable(_010_Regular_Expression_Matching   --- not_std_debug _010_Regular_Expression_Matching   --- not_std_debug.cpp)
add_executable(_010_Regular_Expression_Matching   --- not_practise _010_Regular_Expression_Matching   --- not_practise.cpp)
add_executable(Solutions_010 Solutions.cpp)
