cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_014_LongestCommonPrefix_std _014_LongestCommonPrefix_std.cpp)
add_executable(_014_LongestCommonPrefix_std_debug _014_LongestCommonPrefix_std_debug.cpp)
add_executable(_014_LongestCommonPrefix_practise _014_LongestCommonPrefix_practise.cpp)
add_executable(Solutions_014 Solutions.cpp)
