cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_015_3Sum _015_3Sum.cpp)
add_executable(Solution_015 Solutions.cpp)
add_executable(_015_3Sum_practise _015_3Sum_practise.cpp)
add_executable(_015_3Sum_std _015_3Sum_std.cpp)
add_executable(_015_3Sum_std_debug _015_3Sum_std_debug.cpp)