cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_020_ValidParentheses_std _020_ValidParentheses_std.cpp)
add_executable(_020_ValidParentheses_std_debug _020_ValidParentheses_std_debug.cpp)
add_executable(_020_ValidParentheses_practise _020_ValidParentheses_practise.cpp)
add_executable(Solutions_020 Solutions.cpp)
