cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_021_MergeTwoSortedLists_std _021_MergeTwoSortedLists_std.cpp)
add_executable(_021_MergeTwoSortedLists_std_debug _021_MergeTwoSortedLists_std_debug.cpp)
add_executable(_021_MergeTwoSortedLists_practise _021_MergeTwoSortedLists_practise.cpp)
add_executable(Solutions_021 Solutions.cpp)
