cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_026_RemoveDuplicatesFromSortedArray_std _026_RemoveDuplicatesFromSortedArray_std.cpp)
add_executable(_026_RemoveDuplicatesFromSortedArray_std_debug _026_RemoveDuplicatesFromSortedArray_std_debug.cpp)
add_executable(_026_RemoveDuplicatesFromSortedArray_practise _026_RemoveDuplicatesFromSortedArray_practise.cpp)
add_executable(Solutions_026 Solutions.cpp)
