cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_028_ImplementstrStr_std _028_ImplementstrStr_std.cpp)
add_executable(_028_ImplementstrStr_std_debug _028_ImplementstrStr_std_debug.cpp)
add_executable(_028_ImplementstrStr_practise _028_ImplementstrStr_practise.cpp)
add_executable(Solutions_028 Solutions.cpp)
