cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(_039_CombinationSum_std _039_CombinationSum_std.cpp)
add_executable(_039_CombinationSum_std_debug _039_CombinationSum_std_debug.cpp)
add_executable(_039_CombinationSum_practise _039_CombinationSum_practise.cpp)
add_executable(Solutions_039 Solutions.cpp)
